<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    tools:context=".ui.about.AboutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/aboutToolbar"
        style="@style/Theme.Napptiloompas.Toolbar.WithNavigationIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_screen_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/aboutLogoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@mipmap/ic_launcher"
                android:importantForAccessibility="no"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aboutAppNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/aboutAppVersionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutLogoImageView" />

            <TextView
                android:id="@+id/aboutAppVersionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/aboutAppNameTextView"
                app:layout_constraintTop_toTopOf="@id/aboutAppNameTextView"
                tools:text="v1.0.0" />

            <TextView
                android:id="@+id/aboutDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutAppNameTextView" />

            <TextView
                android:id="@+id/aboutSourceCodeTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:drawablePadding="6dp"
                android:text="@string/about_source_code_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:drawableStartCompat="@drawable/ic_github"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutDescriptionTextView" />

            <TextView
                android:id="@+id/aboutSourceCodeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:textIsSelectable="true"
                android:text="@string/about_source_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutSourceCodeTitleTextView" />

            <TextView
                android:id="@+id/aboutIssuesTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:drawablePadding="6dp"
                android:text="@string/about_issues_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:drawableStartCompat="@drawable/ic_issue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutSourceCodeTextView" />

            <TextView
                android:id="@+id/aboutIssuesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:textIsSelectable="true"
                android:text="@string/about_issues"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutIssuesTitleTextView" />

            <TextView
                android:id="@+id/aboutMadeByTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/about_made_with_love_footer"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutIssuesTextView"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>