<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:transitionGroup="true"
    tools:context=".ui.list.OompaLoompasFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/oompaLoompasToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="@string/oompa_loompa_list_screen_name"
        app:menu="@menu/oompa_loompas_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/oompaLoompasFiltersHorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:requiresFadingEdge="horizontal"
        android:scrollbarSize="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oompaLoompasToolbar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/oompaLoompasFiltersChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            android:paddingHorizontal="12dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/oompaLoompasProfessionsFilterChip"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_profession"
                app:chipIcon="@drawable/ic_profession"
                app:chipIconTint="?attr/colorOnSurface" />

            <com.google.android.material.chip.Chip
                android:id="@+id/oompaLoompasGendersFilterChip"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_gender"
                app:chipIcon="@drawable/ic_gender"
                app:chipIconTint="?attr/colorOnSurface" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/oompaLoompasRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="64dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oompaLoompasFiltersHorizontalScrollView"
        tools:listitem="@layout/row_oompa_loompa" />

    <com.javdc.napptiloompas.presentation.ui.common.ErrorView
        android:id="@+id/oompaLoompasErrorView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oompaLoompasFiltersHorizontalScrollView" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/oompaLoompasCircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>